# CBNetV2

./: .gitignore  CMakeLists.txt
cmake/: FindTensorRT.cmake
configs/cbnet/: htc_cbv2_swin_base_patch4_window7_mstrain_400-1400_adamw_20e_coco.py
mmdet/: __init__.py
mmdet/apis/: test.py
mmdet/models/backbones/: cbnet.py  swin_transformer.py
mmdet/models/dense_heads/: dense_test_mixins.py
mmdet/models/detectors/: two_stage.py
mmdet/models/roi_heads/: htc_roi_head.py
mmdet/utils/: trt.py
trt/: iohelper.cpp  iohelper.hpp  trtconv.cpp  trtctx.cpp  trtctx.hpp  trtinfer.cpp  trtinfer.json
trt/src/: iohelper.cpp  sampleReporting.cpp  trtctx.cpp  trtctx.hpp
trt_test/: test.py  trtconv.cpp  trtconv.json  trtinfer.cpp  trtinfer.json  trtinfer.py
trt_test/src/: iohelper.hpp  sampleReporting.cpp  sampleReporting.h  trtctx.cpp
